--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,56 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
 
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./assets/img/4geeks.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hello Rigo with Vanilla.js</title>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
-  </body>
+  <!-- Fontawesome is our recomended library for icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
+</head>
+
+<body>
+  <!-- Write your HTML code here, you can delete everything withing the body tags -->
+  <div id="container" class="container-fluid text-center">
+    <h1 class="mt-5">Hello Rigo!</h1>
+
+    <button onclick="onClickButton()" class="button button-primary">
+      Click Me!
+    </button>
+    <form>
+      <label for="name">Nombre</label>
+      <input oninput="onChangeInput()" name="name" id="name" value="" />
+      <label for="lastname">Apellido</label>
+      <input name="lastname" id="lastname" value="" />
+    </form>
+    <img src="./assets/img/rigo-baby.jpg" />
+    <img src="./assets/img/rigo-baby.jpg" />
+
+    <p class="alert alert-warning mt-4">
+      If this text is <b>not</b> centered and <b>yellow</b>, you probably have
+      an error
+    </p>
+    <p class="alert alert-warning mt-4">
+      If this text is <b>not</b> centered and <b>yellow</b>, you probably have
+      an error
+    </p>
+    <p class="alert alert-warning mt-4">
+      If this text is <b>not</b> centered and <b>yellow</b>, you probably have
+      an error
+    </p>
+
+  </div>
+  <div id="footer" class="fixed-bottom p-4 text-center">
+    Made with ❤️ by
+    <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+  </div>
+  <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
+  <script type="module" src="/app.js"></script>
+  <script src="/scripts.js">
+  </script>
+</body>
+
 </html>
